# peek-plugin-noop

./: .gitignore  README.rst  bamboo_ut.sh  deploy_plugin_win.ps1  make_deploy.sh  package_plugin_win.ps1  papp_package.json  papp_version.json  papp_version.txt  pipbuild.sh  publish.settings.sh  publish.sh  pyproject.toml  rename_plugin.sh  setup.py  setver.sh  sonar-project.properties
alembic/versions/: 8d21137a2c61_initial_table_creation.py
frontend/server/: papp-noop-admin.component.js  papp-noop-admin.component.js.map  papp-noop-admin.module.js.map
papp_noop/: PappAgentMain.py  PappClientMain.py  PappServerMain.py  PappWorkerMain.py  __init__.py  alembic.ini  papp_changelog.json  papp_package.json
papp_noop/agent/: PappAgentEntryHook.py
papp_noop/client/: PappClientEntryHook.py
papp_noop/client_fe/: papp-noop-client.component.html  papp-noop.module.ts
papp_noop/server/: NoopCeleryTaskMaster.py  PappServerEntryHook.py
papp_noop/server/model/: ModelUtil.py
papp_noop/server_fe/: papp-noop-admin.component.html  papp-noop-admin.module.ts  papp-noop.module.ts
papp_noop/storage/: DeclarativeBase.py
papp_noop/worker/: NoopWorkerTask.py  PappWorkerEntryHook.py
peek_plugin_noop/: __init__.py  alembic.ini  plugin_changelog.json  plugin_package.json
peek_plugin_noop/_private/: PluginNames.py  alembic.ini
peek_plugin_noop/agent/: PluginAgentEntryHook.py
peek_plugin_noop/alembic/: env.py
peek_plugin_noop/client/: PluginClientEntryHook.py
peek_plugin_noop/client_fe/: plugin-noop.module.ts
peek_plugin_noop/mobile-module/: plugin-noop-names.ts  plugin-noop-root.service.ts
peek_plugin_noop/mobile_module/: index.ts
peek_plugin_noop/plugin-module/: package.json
peek_plugin_noop/server/: NoopCeleryTaskMaster.py  PluginServerEntryHook.py
peek_plugin_noop/server_fe/: plugin-noop.module.ts
peek_plugin_noop/storage/: DeclarativeBase.py  NoopTable.py
peek_plugin_noop/worker/: NoopWorkerTask.py  PluginWorkerEntryHook.py
src/alembic/: env.py  script.py.mako
src/papp_noop/: PappAgentMain.py  PappMain.py  PappServerMain.py  PappWorkerMain.py
(+69 files in other folders)
