[build-system]
requires = ["setuptools>=61.2", "setuptools-scm[toml]>=7.1"]
build-backend = "setuptools.build_meta"

[project]
name = "peek-plugin-noop"
version = "0.0.0"
authors = [{name = "Synerty", email = "contact@synerty.com"}]
description = "Peek Plugin - Noop - This is the No Operation test/example plugin"
keywords = ["Peek", "Python", "Platform", "synerty"]
classifiers = []
dependencies = ["peek-plugin-base==0.0.*,>=0.0.0"]

[project.urls]
Homepage = "https://bitbucket.org/synerty/peek-plugin-noop"
Download = "https://bitbucket.org/synerty/peek-plugin-noop/get/0.0.0.zip"

#https://stackoverflow.com/a/75636144

# exclude/include in python packages
# use from ... import ... for package paths
[tool.setuptools.packages.find]
where = ["."]
namespaces = false
exclude = ["*.tests", "*.tests.*", "tests.*", "tests",
    "*.node_modules", "*.node_modules.*", "node_modules.*", "node_modules",
]

# includes for data files - files outside of python packages
[tool.setuptools.package-data]
"*" = ["webpack.config.js", "karma.conf.js", "protractor.conf.js"]

# exludes for data files - files outside of python packages
[tool.setuptools.exclude-package-data]
"*" = ["__pycache__", "platforms", "dist",
    "*.pyc", "*.js", "*.js.map", "*.lastHash"
]
